# kataphraktus

./: .gitignore  README.md  alembic.ini  coverage.json  main.py  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  pr-labeler.yml
alembic/: env.py
alembic/versions/: 81c03d2e48d8_initial_schema_with_all_game_tables.py  91831d69ddfb_add_roadedge_canonicalization_constraint.py
campaigns/: campaign_1.json
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: domain_architecture.md  rules_database.json  savegame_format.md
frontend/: .gitignore  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scenarios/: testudis.cataphract
src/cataphract/: config.py  database.py  factory.py  main.py
tests/: conftest.py
tests/integration/: test_api.py  test_army_service.py  test_database.py  test_pathfinding.py  test_tick_service.py
tests/unit/: test_api_routes.py  test_api_runtime.py  test_army_service.py  test_battle_service.py  test_domain_army.py  test_domain_battle.py  test_domain_harrying.py  test_domain_mercenaries.py  test_domain_messaging.py  test_domain_morale.py  test_domain_movement.py  test_domain_naval.py  test_domain_operations.py  test_domain_orders.py  test_domain_recruitment.py  test_domain_siege.py  test_domain_supply.py  test_domain_tick.py  test_domain_visibility.py  test_harrying_service.py  test_hex_math.py  test_models.py  test_morale_service.py  test_movement_service.py  (+9 more)
(+96 files in other folders)
